--- a/fpmult/fpmult.qsf
+++ b/fpmult/fpmult.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C20F484C7
-set_global_assignment -name TOP_LEVEL_ENTITY fpmult
+set_global_assignment -name TOP_LEVEL_ENTITY fpmult_stage_pre
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 10.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "18:02:41  JANUARY 28, 2011"
 set_global_assignment -name LAST_QUARTUS_VERSION 10.1
@@ -50,11 +50,7 @@ set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 7
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
-set_global_assignment -name VHDL_FILE src/fpmult_stage0_comp.vhdl
-set_global_assignment -name VHDL_FILE src/fpmult_stage0.vhdl
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
-set_global_assignment -name VHDL_FILE src/fpmult.vhdl
-set_global_assignment -name VHDL_FILE src/fpmult_comp.vhdl
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE src/SignalTap.stp
 set_location_assignment PIN_A13 -to GPIO_0[0]
@@ -338,17 +334,25 @@ set_location_assignment PIN_AA10 -to SRAM_WE_N
 set_location_assignment PIN_AB15 -to FL_CE_N
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
 set_global_assignment -name MISC_FILE "D:/Work/VHDL/fpmult/fpmult.dpf"
-set_global_assignment -name VHDL_FILE src/fpmult_stage23_comp.vhdl
-set_global_assignment -name VHDL_FILE src/fpmult_stage23.vhdl
-set_global_assignment -name VHDL_FILE src/fp_generic.vhdl
-set_global_assignment -name VHDL_FILE src/fpmult_stageN.vhdl
-set_global_assignment -name VHDL_FILE src/fpmult_stageN_comp.vhdl
 set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/Work/VHDL/encore/fpmult/sim" -section_id eda_simulation
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name MISC_FILE "D:/Work/VHDL/encore/fpmult/fpmult.dpf"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
+set_global_assignment -name SDC_FILE fpmult.sdc
+set_global_assignment -name VHDL_FILE src/fpmult_stage0_comp.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stage0.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_comp.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stage23_comp.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stage23.vhdl
+set_global_assignment -name VHDL_FILE src/fp_generic.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stageN.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stageN_comp.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stage_pre_comp.vhdl
+set_global_assignment -name VHDL_FILE src/fpmult_stage_pre.vhdl
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
